<resources>
    <string name="app_name">Contact Form</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number : </string>
    <string name="contact_description">Contact Description : </string>
    <string name="email">Email : </string>
    <string name="next">Next</string>
    <string name="birthDate">Birth Date : </string>
    <string name="base_birth_date">01/01/1970</string>
    <string name="confirm_data">Confirm Data</string>
    <string name="edit">Edit</string>
</resources>
