<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/layout_margin"
    tools:context=".MainActivity">

    <EditText
        android:hint="@string/full_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:text="@string/birthDate"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
        <TextView
            android:text="@string/base_birth_date"
            android:id="@+id/birthDateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    <ImageView

        android:id="@+id/birthDate"
        android:src="@drawable/calendargray"
        android:layout_width="100dp"
        android:layout_height="100dp" />
    </LinearLayout>

   <EditText
       android:hint="@string/phone_number"
       android:layout_width="match_parent"
       android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:hint="@string/contact_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:layout_gravity="end"
        android:text="@string/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_layout_bottom"
        />

</LinearLayout>
</ScrollView>