<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DetailContact">

    <TextView
        android:textSize="40sp"
        android:layout_margin="20dp"
        android:gravity="center"
        android:text="@string/confirm_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:layout_margin="5dp"
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:text="@string/birthDate"
        android:id="@+id/tv_birth_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:text="@string/phone_number"
        android:id="@+id/tv_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:text="@string/email"
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:textSize="25sp"
        android:layout_margin="5dp"
        android:text="@string/contact_description"
        android:id="@+id/tv_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

  <Button
      android:layout_margin="5dp"
      android:id="@+id/edit_button"
      android:text="@string/edit"
      android:background="@drawable/button_shape"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />

</LinearLayout>